# multi-agent-loop-lab

./: .env.example  .gitignore  ARCHITECTURE.md  CONCEPT.md  HANDOFF.md  pyproject.toml
runs/: audit-2025-q4-northstar__claim_extractor-master-20260703T105856Z.json  audit-2025-q4-northstar__claim_extractor-master-20260703T112026Z.json  audit-2025-q4-northstar__extract-20260703T084411Z.json  audit-2025-q4-northstar__extract-20260703T085845Z.json  audit-2025-q4-northstar__extract-20260703T093344Z.json  audit-2025-q4-northstar__extract-20260703T095454Z.json  audit-2025-q4-northstar__failed-claim-0006-20260703T101649Z.json  audit-2025-q4-northstar__manage-claim_extractor-20260703T105923Z.json  audit-2025-q4-northstar__manage-claim_extractor-20260703T112049Z.json  audit-2025-q4-northstar__manage-verifier-20260703T110040Z.json  audit-2025-q4-northstar__manage-verifier-20260703T112158Z.json  audit-2025-q4-northstar__verifier-claim-0001-20260703T105930Z.json  audit-2025-q4-northstar__verifier-claim-0001-20260703T112057Z.json  audit-2025-q4-northstar__verifier-claim-0002-20260703T105930Z.json  audit-2025-q4-northstar__verifier-claim-0002-20260703T112057Z.json  audit-2025-q4-northstar__verifier-claim-0003-20260703T105930Z.json  audit-2025-q4-northstar__verifier-claim-0003-20260703T112057Z.json  audit-2025-q4-northstar__verifier-claim-0004-20260703T105930Z.json  audit-2025-q4-northstar__verifier-claim-0004-20260703T112057Z.json  audit-2025-q4-northstar__verifier-claim-0005-20260703T105930Z.json  audit-2025-q4-northstar__verifier-claim-0005-20260703T112057Z.json  (+69 more)
tests/: test_eval.py  (+2 more)
(+603 files in other folders)
