[project]
name = "proofbench"
version = "0.1.0"
description = "A local claim-evidence audit workbench."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.scripts]
proofbench = "proofbench.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proofbench"]
